src/test/resources/typeSystemTestModels/invalid/enums/EnumModifiersValid.java
package typeSystemTestModels.invalid.enums;

public class EnumModifiersValid {

  abstract enum A {

  }

  final enum B {

  }
}
